<resources>
    <string name="app_name">TestMyPsy</string>
    <string name="agression_test">Aggression Test</string>
    <string name="question">Question</string>
    <string name="ex_ul">Extremely Unlikely</string>
    <string name="sw_ul">Somewhat Unlikely</string>
    <string name="neutral">Neutral</string>
    <string name="sw_l">Somewhat Likely</string>
    <string name="ex_l">Extremely Likely</string>
    <string name="take_test">Take Test</string>
    <string name="atq19">Some of my friends think I am a hothead.</string>
    <string name="atq5">If I have to resort to violence to protect my rights, I will.</string>
    <string name="atq29">When people are especially nice to me, I wonder what they want.</string>
    <string name="atq10">I tell my friends openly when I disagree with them.</string>
    <string name="atq9">I have become so mad that I have broken things.</string>
    <string name="atq13">I can\'t help getting into arguments when people disagree with me.</string>
    <string name="atq25">I wonder why sometimes I feel so bitter about things.</string>
    <string name="atq1">Once in a while, I can’t control the urge to strike another person.</string>
    <string name="atq18">I am an even-tempered person.</string>
    <string name="atq27">I am suspicious of overly friendly strangers.</string>
    <string name="atq8">I have threatened people I know.</string>
    <string name="atq15">I flare up quickly but get over it quickly.</string>
    <string name="atq2">Given enough provocation, I may hit another person.</string>
    <string name="atq12">When people annoy me, I may tell them what I think of them.</string>
    <string name="atq22">I am sometimes eaten up with jealousy.</string>
    <string name="atq7">I can think of no good reason for ever hitting a person.</string>
    <string name="atq23">At times I feel I have gotten a raw deal out of life.</string>
    <string name="atq21">I have trouble controlling my temper.</string>
    <string name="atq16">When frustrated, I let my irritation show.</string>
    <string name="atq28">I sometimes feel that people are laughing at me behind my back.</string>
    <string name="atq11">I often find myself disagreeing with people.</string>
    <string name="atq3">If somebody hits me, I hit back.</string>
    <string name="atq17">I sometimes feel like a powder keg ready to explode.</string>
    <string name="atq24">Other people always seem to get the breaks.</string>
    <string name="atq6">There are people who pushed me so far that we came to blows.</string>
    <string name="atq26">I know that "friends" talk about me behind my back.</string>
    <string name="atq14">My friends say that I’m somewhat argumentative.</string>
    <string name="atq20">Sometimes I fly off the handle for no good reason.</string>
    <string name="atq4">I get into fights a little more than the average person.</string>
    <string name="submit_button">Submit</string>
    <string name="back_button">Back</string>
    <string name="eiq1"> I realise immediately when I lose my temper</string>
    <string name="eiq2">I can \'re-frame\' bad situations quickly </string>
    <string name="eiq3">I am able to always motive myself to do difficult task </string>
    <string name="eiq4">I am always able to see things from the other person\'s viewpoint </string>
    <string name="eiq5">I am an excellent listener </string>
    <string name="eiq6">I know when I am happy </string>
    <string name="eiq7">I do not wear my \'heart on my sleeve\' </string>
    <string name="eiq8">I am usually able to prioritise important activities at work and get on with them</string>
    <string name="eiq9">I am excellent at empathising with someone else\'s problem </string>
    <string name="eiq10">I never interrupt other people\'s conversations </string>
    <string name="eiq11">I usually recognise when I am stressed </string>
    <string name="eiq12">Others can rarely tell what kind of mood I am in </string>
    <string name="eiq13">I always meet deadlines </string>
    <string name="eiq14">I can tell if someone is not happy with me </string>
    <string name="eiq15">I am good at adapting and mixing with a variety of people </string>
    <string name="eiq16">When I am being \'emotional\' I am aware of this </string>
    <string name="eiq17">I rarely \'fly off the handle\' at other people  </string>
    <string name="eiq18"> I never waste time </string>
    <string name="eiq19">I can tell if a team of people are not getting along with each other </string>
    <string name="eiq20">When I feel anxious I usually can account for the reason(s) </string>
    <string name="eiq21">Difficult people do not annoy me </string>
    <string name="eiq22">I do not prevaricate </string>
    <string name="eiq23">I can usually understand why people are being difficult towards me </string>
    <string name="eiq24"> I love to meet new people and get to know what makes them \'tick\'</string>
    <string name="eiq25">I always know when I\'m being unreasonable</string>
    <string name="eiq26">I can consciously alter my frame of mind or mood </string>
    <string name="eiq27">I believe you should do the difficult things first </string>
    <string name="eiq28">Other individuals are not \'difficult\' just \'different\' </string>
    <string name="eiq29">I need a variety of work colleagues to make my job interesting </string>
    <string name="eiq30">Awareness of my own emotions is very important to me at all times </string>
    <string name="eiq31">I do not let stressful situations or people affect me once I have left work </string>
    <string name="eiq32">Delayed gratification is a virtue that I hold to </string>
    <string name="eiq33">I can understand if I am being unreasonable </string>
    <string name="eiq34">I like to ask questions to find out what it is important to people </string>
    <string name="eiq35">I can tell if someone has upset or annoyed me </string>
    <string name="eiq36">I rarely worry about work or life in general </string>
    <string name="eiq37">I believe in \'Action this Day\' </string>
    <string name="eiq38">I can understand why my actions sometimes offend others </string>
    <string name="eiq39">I see working with difficult people as simply a challenge to win them over </string>
    <string name="eiq40">I can let anger \'go\' quickly so that it no longer affects me  </string>
    <string name="eiq41">I can suppress my emotions when I need to </string>
    <string name="eiq42">People are the most interesting thing in life for me </string>
    <string name="eiq43">I can always motivate myself even when I feel low </string>
    <string name="eiq44">I can sometimes see things from others\' point of view </string>
    <string name="eiq45">I am good at reconciling differences with other people </string>
    <string name="eiq46">I know what makes me happy </string>
    <string name="eiq47">Others often do not know how I am feeling about things </string>
    <string name="eiq48">Motivations has been the key to my success </string>
    <string name="eiq49">Reasons for disagreements are always clear to me </string>
    <string name="eiq50">I generally build solid relationships with those I work with </string>
    <string name="eiTest">Emotional Intelligence Test</string>
    <string name="qolTest">Quality of Life Test</string>
    <string name="qol1">How would you rate your quality of life?</string>
    <string name="qol2">How satisfied are you with your health?</string>
    <string name="qol3">To what extent do you feel that physical pain prevents you from doing what you need to do?</string>
    <string name="qol4">How much do you need any medical treatment to function in your life?</string>
    <string name="qol5">How much do you enjoy life?</string>
    <string name="qol6">To what extent do you feel your life to be meaningful?</string>
    <string name="qol7">How well are you able to concentrate?</string>
    <string name="qol8">How safe do you feel in your daily life?</string>
    <string name="qol9">How healthy is your physical environment?</string>
    <string name="qol10">. Do you have enough energy for everyday life?</string>
    <string name="qol11">Are you able to accept your bodily appearance?</string>
    <string name="qol12">Have you enough money to meet your needs?</string>
    <string name="qol13">How available to you is the information that you need in your day-to-day life?</string>
    <string name="qol14">To what extent do you have the opportunity for leisure activities?</string>
    <string name="qol15">How well are you able to get around?</string>
    <string name="qol16">How satisfied are you with your sleep?</string>
    <string name="qol17">How satisfied are you with your ability to perform your daily living activities.</string>
    <string name="qol18">How satisfied are you with your capacity for work?</string>
    <string name="qol19">How satisfied are you with yourself?</string>
    <string name="qol20">How satisfied are you with your personal relationships?</string>
    <string name="qol21"> How satisfied are you with your sex life?</string>
    <string name="qol22">How satisfied are you with the support you get fromyour friends?</string>
    <string name="qol23">How satisfied are you with the conditions of your living place?</string>
    <string name="qol24">How satisfied are you with your access to health services?</string>
    <string name="qol25"> How satisfied are you with your mode of transportation?</string>
    <string name="qol26">How often do you have negative feelings, such as blue mood, despair, anxiety, depression?</string>
    <string name="very_poor">Very Poor</string>
    <string name="poor">Poor</string>
    <string name="neither_nor_poor">Neither poor nor good</string>
    <string name="good">Good</string>
    <string name="very_good">Very Good</string>
    <string name="not_at_all">Not at All</string>
    <string name="a_little">A Little</string>
    <string name="a_moderate_amount">A Moderate Amount</string>
    <string name="moderately">Moderately</string>
    <string name="mostly">Mostly</string>
    <string name="completely">Completely</string>
    <string name="very_much">Very Much</string>
    <string name="extreme_amount">An Extreme Amount</string>
    <string name="extremely">Extremely</string>
    <string name="very_dissatisfied">Very Dissatisfied</string>
    <string name="dissatisfied">Dissatisfied</string>
    <string name="neither_nor_dissatisfied">Neither Satisfied Nor Dissatisfied</string>
    <string name="satisfied">Satisfied</string>
    <string name="never">Never</string>
    <string name="seldom">Seldom</string>
    <string name="very_often">Very Often</string>
    <string name="neither_nor_well">Neither Poor Nor Well</string>
    <string name="well">Well</string>
    <string name="very_well">Very Well</string>
    <string name="quite_often">Quite Often</string>
    <string name="always">Always</string>
    <string name="very_satisfied">Very Satisfied</string>
    <string name="ptTest">Personality Test</string>
    <string name="ptq1">1. I Am the life of the party.</string>
    <string name="ptq2">2. I Feel little concern for others.</string>
    <string name="ptq3">3. I Am always prepared.</string>
    <string name="ptq4">4. I Get stressed out easily.</string>
    <string name="ptq5">5. I Have a rich vocabulary.</string>
    <string name="ptq6">6. I Don\'t talk a lot.</string>
    <string name="ptq7">7. I Am interested in people.</string>
    <string name="ptq8">8. I Leave my belongings around.</string>
    <string name="ptq9">9. I Am relaxed most of the time</string>
    <string name="saTest">SelfActualization Test</string>
    <string name="spiTest">Social Phobia Test</string>
    <string name="ocd_test">OCD Test</string>
    <string name="eq_test">Empathy Quotient Test</string>
    <string name="ia_test">Internet addiction Test</string>
</resources>